added edit functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,10 @@
   <ion-content>
     <ion-list>
       <ion-menu-toggle>
-        <ion-item routerLink="/profile">
+        <ion-item routerLink="/login">
           <ion-icon  name="mail" slot="start">   </ion-icon>
        
-           <ion-label >Profile</ion-label>
+           <ion-label >Login</ion-label>
         </ion-item>
       </ion-menu-toggle>
 
