--- a/src/app/pages/addprofile/addprofile.page.html
+++ b/src/app/pages/addprofile/addprofile.page.html
@@ -30,6 +30,23 @@
             </ion-select>
           </ion-item>
         </ion-card>
+        <ion-card>
+
+          <ion-item>
+              <ion-label position="floating" style="color:green">Name</ion-label>
+              <ion-input type="text" ngModel name="name"  placeholder="FullName"></ion-input>
+          </ion-item>
+        </ion-card>
+
+        <ion-card>
+
+          <ion-item>
+              <ion-label position="floating" style="color:green">Email</ion-label>
+              <ion-input type="text" ngModel name="email"  placeholder="example@gmail.com"></ion-input>
+          </ion-item>
+        </ion-card>       
+
+        
 
         <ion-card>
 
