--- a/src/app/pages/job-detail/job-detail.page.html
+++ b/src/app/pages/job-detail/job-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="favorite">
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <ion-back-button defaultHref="jobs"></ion-back-button>
     </ion-buttons>
     <ion-title class="title"> <span style="color:#1f8611;"> Job Detail</span></ion-title>
 
