added edit and delete

--- a/src/app/pages/addjob/addjob.page.html
+++ b/src/app/pages/addjob/addjob.page.html
@@ -94,6 +94,6 @@
         
      
     </ion-list>
-    <ion-button class="title" type="submit"  shape="block" style="color:white" expand="block">{{btnText}}</ion-button>
+    <ion-button class="title" type="submit"  shape="round" style="color:white" expand="block">{{btnText}}</ion-button>
   </form>
 </ion-content>
