--- a/src/app/pages/addjob/addjob.page.scss
+++ b/src/app/pages/addjob/addjob.page.scss
@@ -5,8 +5,10 @@ ion-content{
 .title{
     font-family: cursive;
     font-size: larger;
-    --background: green;
-    color:#1f8611;
+    color:white;
+    --background: #33cccc;
+
+
 }
 .word-color{
     color:green;
