--- a/src/app/pages/job/job.page.html
+++ b/src/app/pages/job/job.page.html
@@ -4,9 +4,9 @@
       <ion-icon name="logo-buffer"></ion-icon>
       <ion-label>Job Details</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="applicants">
+    <ion-tab-button tab="editjob">
       <ion-icon name="logo-buffer"></ion-icon>
-      <ion-label>Applicants</ion-label>
+      <ion-label>Edit Job</ion-label>
     </ion-tab-button>
     <!-- <ion-tab-button tab="confirmed">
         <ion-icon name="images"></ion-icon>
