--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -36,7 +36,7 @@
             
           </ion-list>
           <small class="error">{{error}}</small>
-          <ion-button  type="submit"  shape="round" style="color:white" block> {{ btnText }} </ion-button>
+          <ion-button   class="title" type="submit"  shape="round" style="color:white" > {{ btnText }} </ion-button>
            
         </form>
         
