--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -7,8 +7,8 @@ ion-content{
 .title{
   font-family: cursive;
   font-size: larger;
-  color:#1f8611;
-  --background: green;
+  color:white;
+  --background: #33cccc;
 
 
 }
