--- a/src/app/pages/preferences/preferences.page.scss
+++ b/src/app/pages/preferences/preferences.page.scss
@@ -12,7 +12,7 @@
     font-family: cursive;
     font-size: larger;
     color:#1f8611;
-    --background: green;
+    --background: #33cccc;
 
 
 }
