--- a/src/app/pages/job-detail/job-detail.page.scss
+++ b/src/app/pages/job-detail/job-detail.page.scss
@@ -1,5 +1,4 @@
 .ion-content{
-    background-color:#33cccc;
     padding:20px;
 
 }
@@ -28,17 +27,14 @@
   .grid-container {
     display: grid;
   }
-  .btn-color {
-      --background: var(--ion-color-btn);
-      --background: #33cccc;
-    }
+  
     .title{
-        font-family: cursive;
-        font-size: larger;
-        --background: green;
-        color:#1f8611;
-
-    }
+      font-family: cursive;
+      font-size: larger;
+      --background: #33cccc;
+      color:#1f8611;
+      border-left: 400px;
+  }
   
   .card-subtitle {
     font-size: 1.0em;  
