--- a/src/app/pages/job/job.page.scss
+++ b/src/app/pages/job/job.page.scss
@@ -32,14 +32,13 @@
       --background: var(--ion-color-btn);
       --background: #33cccc;
     }
-    .title{
-        font-family: cursive;
-        font-size: larger;
-        --background: green;
-        color:#1f8611;
-
-    }
-  
+  .title{
+      font-family: cursive;
+      font-size: larger;
+      --background: #33cccc;
+      color:#1f8611;
+      border-left: 400px;
+  }
   .card-subtitle {
     font-size: 1.0em;  
     color: #33cccc;
