added email and call

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   
 
-  <ion-button  type="submit"(click)="goToOpportunities()"  shape="round" style="color:white" expand="block"> Select Preferences</ion-button>
+  <ion-button class="title" type="submit"(click)="goToOpportunities()"  shape="round" style="color:white" expand="block"> Select Preferences</ion-button>
 
 
 
