--- a/src/app/pages/job-detail/job-detail.page.html
+++ b/src/app/pages/job-detail/job-detail.page.html
@@ -13,10 +13,15 @@
   <ion-card class="card">
     <ion-card-header>
       <div class="grid-container">
-        <div class="grid-item"><ion-avatar>
-          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-        </ion-avatar></div>
-  <div class="grid-item"><ion-card-title class="card-title">{{jobdet.name}}</ion-card-title>
+        
+  <div class="grid-items">
+      <ion-avatar>
+        <img src="assets/icon/resume.svg">
+      </ion-avatar>
+   
+      <ion-card-title class="card-title">{{jobdet.name}}</ion-card-title>
+
+   
   </div>
         
 
