--- a/src/app/pages/opportunities/opportunities.page.html
+++ b/src/app/pages/opportunities/opportunities.page.html
@@ -33,7 +33,7 @@
               <ion-row >
                 <ion-col col-md-3>
                   <ion-avatar>
-                    <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+                    <img src="assets/icon/resume.svg">
                     </ion-avatar>
                 </ion-col>
                 <ion-col col-md-3>
