--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -48,8 +48,9 @@
 
     </ion-content>
     
-  <ion-footer text-center padding>
-  I have no  account,<ion-button class="title" (click)="goToSignup()"><b>Sign Up</b></ion-button>
+  <ion-footer class="footer">
+    <h3>I have no  account</h3>
+  <ion-button class="title" (click)="goToSignup()"><b>Sign Up</b></ion-button>
   </ion-footer>
   
   
