--- a/src/app/pages/job-detail/job-detail.page.html
+++ b/src/app/pages/job-detail/job-detail.page.html
@@ -15,9 +15,9 @@
       <div class="grid-container">
         
   <div class="grid-items">
-      <ion-avatar>
-        <img src="assets/icon/resume.svg">
-      </ion-avatar>
+      
+        <img src="assets/icon/interview.svg">
+     
    
       <ion-card-title class="card-title">{{jobdet.name}}</ion-card-title>
 
@@ -39,14 +39,16 @@
       <p> Salary: {{ jobdet.salary }}</p>
       <p> Email: {{ jobdet.email }}</p>
       <p> Contact: {{ jobdet.phone }}</p>
-      <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="round" (click)="openPdf()">Download and open Job details pdf</ion-button>
+      <div class="buttons">
+        <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="round" (click)="openPdf()">Download pdf</ion-button>
 
 
 
-    <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="round" (click)="callUser(jobdet.phone)">Contact Via phone</ion-button>
+    <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="round" (click)="callUser(jobdet.phone)">Call</ion-button>
 
 
-    <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="round" (click)="sendEmail(jobdet.email)">Contact via email</ion-button>
+    <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="round" (click)="sendEmail(jobdet.email)">Email</ion-button>
+      </div>
   
 </ion-card-content>
 
