--- a/src/app/pages/job/about/about.page.html
+++ b/src/app/pages/job/about/about.page.html
@@ -13,9 +13,9 @@
   <ion-card class="card">
     <ion-card-header>
       <div class="grid-container">
-        <div class="grid-item"><ion-avatar>
-          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-        </ion-avatar></div>
+        <div class="grid-item">
+          <img src="assets/icon/resume.svg">
+      </div>
   <div class="grid-item"><ion-card-title class="card-title">{{jobdet.name}}</ion-card-title>
   </div>
         
@@ -31,13 +31,15 @@
      <p>{{jobdet.description}}</p> 
       <br>
       <p> Email: {{ jobdet.email }}</p>
+<div class="buttons">
+  <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="round" (click)="openPdf()">Download and open Job details pdf</ion-button>
 
-      <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="round" (click)="openPdf()">Download and open Job details pdf</ion-button>
-
-    <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="block" (click)="deleteJob(jobdet.uid)">Delete</ion-button>
+  <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="block" (click)="deleteJob(jobdet.uid)">Delete</ion-button>
 
 
-    <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="block" (click)="goToEdit()">Edit</ion-button>
+  <ion-button  class="title" type="submit"  shape="round" style="color:white" expand="block" (click)="goToEdit()">Edit</ion-button>
+</div>
+      
   
 </ion-card-content>
 
