--- a/src/app/pages/opportunities/opportunities.page.scss
+++ b/src/app/pages/opportunities/opportunities.page.scss
@@ -9,17 +9,18 @@
   display: grid;
 }
 .grid{
+  display: flex;
+  flex-direction: column;
+  margin: 0 !important;
+  background: white;
   background-color: white;
-  padding: 30px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .card-content{
   background-color: white;
 }
 .title{
-  font-family: cursive;
   font-size: larger;
-  border-radius: 15%;
+  // border-radius: 15%;
   --background: #33cccc;
   color:#1f8611;
 }
@@ -28,17 +29,16 @@
   font-size: 10;  
   font-weight: bold;
   color: black;
-  padding: 20px;
-  font-family: cursive;
+  // padding: 20px;
   background-color: white;
 
 }
-.card{
-    border-radius: 15%;
-    font-family: cursive;
-    width: 100%;
-    padding: 20px;
-    background-color: white;   
+.card-content{
+    display: flex;
+    flex-direction: column;
+    margin: 0 !important;
+    background: white;
+    width: 500px;
 
 }
 .header{
