--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -20,21 +20,20 @@
 
     <ion-card-header class="card-head" *ngIf="user !== null">
       <!-- <img [src]="shop.img" height="200px" style="width: 100%" alt=""  /> -->
-      <ion-button class="title"  shape="block" style="color:white" (click)="editProfile()" >{{ btntext }}</ion-button>
-
-      <div class="floatingbtn">
+      <div class="buttons">
+        <ion-button class="title"  shape="block" style="color:white" (click)="editProfile()" >{{ btntext }}</ion-button>
+        <ion-button  class="title"shape="block" style="color:white" (click)="signOut()" >logout</ion-button>
+  
+      </div>
+      
+      <div class="buttons">
 
         <ion-icon routerLink="/addprofile"
           style="position: relative; color:white; font-size: 35px;"
           name="add"
         ></ion-icon>
       </div>
-      <ion-card class="floatingbn">
-        <ion-card-content >
-          <ion-button  class="title"shape="round" style="color:white" (click)="signOut()" >logout</ion-button>
-
-        </ion-card-content>
-      </ion-card>
+      
     </ion-card-header>
     <br />
 
