--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -4,7 +4,9 @@
 
 }
 
-
+.buttons{
+    display: flex;
+}
 .fab-icon{ 
     float: right;
     margin-left: 220px;
@@ -55,7 +57,6 @@ height: 55px;
 
 }
 .title{
-    font-family: cursive;
     font-size: larger;
     --background: #33cccc;
     color:#1f8611;
