--- a/src/app/pages/signup/signup.page.scss
+++ b/src/app/pages/signup/signup.page.scss
@@ -12,7 +12,7 @@ middle{
 margin-left: 30px;
 }
 .title{
-    font-family: cursive;
+    font-family: 'Courier New', Courier, monospace;
     font-size: small;
     color:white;
     --background: #33cccc;
@@ -43,6 +43,7 @@ margin-left: 30px;
 .footer{
     display: grid;
     grid-template-rows: 1 2;
+    padding:20px;
 }
 
 .form{
